kwv-system/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kube-web-view
  name: kube-web-view
  namespace: kwv-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-web-view
  template:
    metadata:
      labels:
        app: kube-web-view
    spec:
      serviceAccountName: kube-web-view
      containers:
        - name: kube-web-view
          # see https://codeberg.org/hjacobs/kube-web-view/releases
          image: hjacobs/kube-web-view:21.2.0
          args:
            - --port=8080
          # uncomment the following line to enable pod logs
          # (disabled by default as they might consider sensitive information)
          # - "--show-container-logs"
          # uncomment the following line to unhide secret data
          # see also https://kube-web-view.readthedocs.io/en/latest/security.html
          # - "--show-secrets"
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
          # resources:
          #   limits:
          #     memory: 100Mi
          #   requests:
          #     cpu: 5m
          #     memory: 100Mi
          securityContext:
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1000
