kwv-system/service.yaml
apiVersion: v1
kind: Service
metadata:
  # annotations:
  #   cloud.google.com/neg: '{"ingress":true}'
  labels:
    app: kube-web-view
  name: kube-web-view
  namespace: kwv-system
spec:
  selector:
    app: kube-web-view
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
