kwv-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-web-view
  namespace: kwv-system
spec:
  rules:
    - host: kube-web-view.k8s-sample-gke.jchengdev.com  # <TODO> use Kustomize to extract hardcoded DNS
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kube-web-view
                port:
                  number: 80
